@@ -3,20 +3,28 @@
 #ifndef MAPBUILDER_H
 #define MAPBUILDER_H
 
+#define MAX_FRAME_COUNT 6572
+
 #define MAP_WIDTH 80
 #define MAP_HEIGHT 21
 
-typedef enum {
-    FLAT,      // .
-    BOULDER,    // %
-    BORDER,     // %
-    GATE,       // #
-    ROAD,       // #
-    TALL_GRASS, // :
-    WATER,      // ~
-    TREE,       // ^
-} TileType;
+#define GATE_PLACEMENT_PADDING 6
+#define FIRST_PASS_NUM_TYPES 4
 
+#define NOISE_SCALE 1.0f
+#define NOISE_DENSITY 8
+//#define NOISE_LACUNARITY 1.0006f
+
+typedef enum {
+    FLAT,       // .    <1st pass>
+    BOULDER,    // %    <1st pass>
+    BORDER,     // %    <border pass>
+    GATE,       // #    <border pass>
+    ROAD,       // #    <2nd pass>
+    TALL_GRASS, // :    <1st pass>
+    WATER,      // ~    <1st pass>
+    TREE,       // ^    <3nd pass>
+} TileType;
 
 typedef struct {
     TileType type;
